<resources>
    <string name="app_name">Final Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_message">Hello World</string>
    <string name="Sign_in1">Sign in Help</string>
    <string name="Sign_in2">1) Click on the SIgn-in button</string>
    <string name="Sign_in3">2) Enter an Email name and a password with at least 1 uppercase letter, 1 lowercase letter, 1 number, and 1 symbol</string>

    <string name="create1">Player Creation</string>
    <string name="create2">1) Click on the button to add a new player.</string>
    <string name="create3">2) Click on the oblect in the database to update it.</string>
    <string name="create4">3) Click on the delete button to remove the object.</string>

    <string name="app_name">Final Group Project Application</string>

    <string name="details">Information Page</string>

    <string name="help_title">How it works?</string>

    <string name="howto_message">Welcome to Movie Information app!
    \n\nSimply enter the movie name you wish to search for in order to get
    the movies under that name and information about the movie you want.
    \n\nIf you wish to see details, just add one movie of your choice to
        your library, and you can have access to it
    after you click the + sign at the top!</string>

    <string name ="lib_help_title">Help: </string>
    <string name="lib_help_message">
        This page stores all your saved movies.
        \n\nIf you wish to see details about a movie you have saved, you can see by
        clicking on the movie.
        \n\nIf you wish to delete a movie, click on the movie, come back to this page,
        and click on the garbage icon, choose whether you want to delete or not.
    </string>
    <string name="open">open</string>
    <string name="close">close</string>

    <string name="author">Author:</string>

    <string name="save">save</string>
    <string name="remove">remove</string>
    <string name="search">search</string>

    <string name="MovieMainPageHeader">Welcome to \nMovie Information App </string>
    <string name="MovieSearch">Search</string>
    <string name="ToMovieList">Saved Movies</string>


    <string name="released">Released On: </string>
    <string name="runtime">Runtime: </string>
    <string name="cast">The Cast: </string>
    <string name="plot">The Plot: </string>

    <string name="about">About</string>


    <string name="enter_search_here">Enter Search Here</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="image_thumbnail">Image thumbnail</string>
    <string name="saved_images">Saved Images</string>
    <string name="about">About</string>
    <string name="ticket_master_name">Welcome to Ticket Master Project</string>
    <string name="search">Search</string>
    <string name="radius_km">Radius (km)</string>
    <string name="city">City</string>
    <string name="name">name</string>
    <string name="date">date</string>
    <string name="event_name">event name</string>
    <string name="event_date">event date</string>
    <string name="event_venue">event venue</string>
    <string name="ticket_price">ticket price</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="save">Save</string>
    <string name="remove">Remove</string>
    <string name="show_result">Events in %s around %d km: </string>
    <string name="no_result">No found events in %s around %d km!</string>
    <string name="invalid_city">Please enter a city</string>
    <string name="no_radius">Please enter a radius</string>
    <string name="zero_radius">Radius has to be greater than 0!</string>
    <string name="delete_warning">Do you want to delete the event?</string>
    <string name="deleted_message">You deleted the event %s</string>
    <string name="show_favorite">Your favorite list:</string>
    <string name="saved_to_favorite">has been saved to favorite list!</string>
    <string name="failed_to_save">Failed to save the event. Please try again!</string>
    <string name="event_exists">This event is already in the favorite list</string>
    <string name="question">Question:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undo">Undo</string>
    <string name="app_name">CST2335 Ticket Master Project</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="time">time</string>
    <string name="eventAddress">event address</string>
    <string name="ok">ok</string>
    <string name="Usage">Usage</string>
    <string name="helpMessage">Enter city and distance to find the event that you are looking for.%nEasily save your favorite event.%nDont like the event? Dont worry simply remove it from your list with remove button.</string>

    <string name="homepage">Welcome to Homepage</string>
</resources>