<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    tools:context=".ui.EventDetailsFragment">

    <ImageView
        android:id="@+id/eventImg"
        android:layout_width="300dp"
        android:layout_height="211dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/eventName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/event_name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventImg" />

    <TextView
        android:id="@+id/eventDate"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/event_date"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventName" />

    <TextView
        android:id="@+id/eventVenue"
        android:layout_width="346dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/event_venue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventDate" />

    <TextView
        android:id="@+id/eventAddress"
        android:layout_width="348dp"
        android:layout_height="37dp"
        android:gravity="center"
        android:text="@string/eventAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventVenue" />

    <TextView
        android:id="@+id/ticketPrice"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/ticket_price"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventAddress" />

    <Button
        android:id="@+id/buyTicketButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/buy_ticket"
        app:backgroundTint="#673AB7"
        app:layout_constraintStart_toStartOf="@+id/ticketPrice"
        app:layout_constraintTop_toBottomOf="@+id/ticketPrice" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/save"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintEnd_toEndOf="@+id/ticketPrice"
        app:layout_constraintTop_toBottomOf="@+id/ticketPrice" />

</androidx.constraintlayout.widget.ConstraintLayout>