<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/datePreview"
        android:layout_width="92dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timePreview"
        android:layout_width="92dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:text="@string/time"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePreview" />

    <TextView
        android:id="@+id/namePreview"
        android:layout_width="278dp"
        android:layout_height="49dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timePreview"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>