<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.TicketMasterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:elevation="1dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/citySearch"
                    android:layout_width="131dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="14dp"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/radiusSearch"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/radiusSearch"
                    android:layout_width="127dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/radius_km"
                    android:inputType="number"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/citySearch"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="85dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="14dp"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/search"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/radiusSearch"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/resultText"
                    android:layout_width="342dp"
                    android:layout_height="39dp"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radiusSearch" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/eventsRecyclerView"
                android:layout_width="435dp"
                android:layout_height="730dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>
    </FrameLayout>
</LinearLayout>